[flake8]
ignore = E203,W503
max-line-length = 120

[tool:pytest]
addopts = --cov=pimdb --cov=tests


[metadata]
license_file = LICENSE.txt
name = pimdb
description = maintain a local copy of essential information from IMDb
long_description = file:README.rst
long_description_content_type = text/markdown
url = https://github.com/roskakori/pimdb
project_urls =
    Issue Tracker = https://github.com/roskakori/pimdb/issues
author = Thomas Aglassinger
author_email = roskakori@users.sourceforge.net
license = BSD
classifiers =
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Topic :: Software Development
     Topic :: Scientific/Engineering :: Information Analysis

[options]
packages =
    pimdb
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pimdb = pimdb.command:main
