[flake8]
ignore = E203,W503
max-line-length = 120

[metadata]
license_file = LICENSE.txt
name = pimdb
description = build a database from IMDb datasets
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/roskakori/pimdb
project_urls =
    Documentation = https://pimdb.readthedocs.io/
    Issue Tracker = https://github.com/roskakori/pimdb/issues
author = Thomas Aglassinger
author_email = roskakori@users.sourceforge.net
license = BSD
classifiers =
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Topic :: Software Development
     Topic :: Scientific/Engineering :: Information Analysis

[options]
packages =
    pimdb
install_requires =
    requests
    sqlalchemy >= 1.3
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pimdb = pimdb.command:main

[options.extras_require]
postgres = psycopg2-binary >= 2.5
